# title_build_my_value_proposition_and_marketing_strategy_crew

./: README.md  pyproject.toml
output/: report_4p.md  report_buyers.md  report_canvas.md  report_swot.md  reports_combine.md
src/title_build_my_value_proposition_and_marketing_strategy_crew/: crew.py  main.py
src/title_build_my_value_proposition_and_marketing_strategy_crew/config/: agents.yaml  tasks.yaml
